--- a/index.html
+++ b/index.html
@@ -2,13 +2,11 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="/css/style.css">
+  <title>Title</title>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.1/owl.carousel.min.js'></script>
+  <script src="/js/main.js"></script>
+  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.1/assets/owl.carousel.min.css'>
@@ -16,7 +14,6 @@
 </head>
 
 <body>
-
   <section class="testimonials">
     <div class="wrapper">
       <div class="row" style="margin: 0;">
@@ -54,7 +51,9 @@
   </section>
   <section class="container">
     <section class="content">
-      <a class="link" href=""><span>See product gallery</span> <hr class="hr"></a>
+      <a class="link" href=""><span>See product gallery</span>
+        <hr class="hr">
+      </a>
     </section>
     <section class="feature_1 content">
       <div class="feature__content_right">
@@ -79,7 +78,6 @@
       <img class="feature__image_left" src="image/asset-laputi-large.png" alt="">
     </section>
   </section>
-  <script src="main.js"></script>
 </body>
 
 </html>
