--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="en">
 
 <head>
-  <title>Title</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title></title>
+  <link rel="stylesheet" href="/css/style.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js'></script>
   <script src='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.1/owl.carousel.min.js'></script>
-  <script src="/js/main.js"></script>
-  <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/OwlCarousel2/2.1.1/assets/owl.carousel.min.css'>
@@ -51,9 +53,7 @@
   </section>
   <section class="container">
     <section class="content">
-      <a class="link" href=""><span>See product gallery</span>
-        <hr class="hr">
-      </a>
+      <a class="link" href=""><span>See product gallery</span> <hr class="hr"></a>
     </section>
     <section class="feature_1 content">
       <div class="feature__content_right">
@@ -78,6 +78,7 @@
       <img class="feature__image_left" src="image/asset-laputi-large.png" alt="">
     </section>
   </section>
+  <script src="js/main.js"></script>
 </body>
 
 </html>
