--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link rel='stylesheet' href='https://themes.audemedia.com/html/goodgrowth/css/owl.theme.default.min.css'>
 </head>
 
-<body">
+<body>
   <section class="testimonials">
     <div class="wrapper">
       <div class="row" style="margin: 0;">
